dripmail-sf/force-app/main/default/objects/Sender__c/Sender__c.object-meta.xml
<CustomObject>
    <description>Entities to be used for providing Display Name and From Email for emails to be sent using Emergence Drip Mail for a given Domain.</description>
    <label>Sender</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Senders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>