dripmail-sf/force-app/main/default/objects/Sender__c/fields/Associated_User__c.field-meta.xml
<CustomField>
    <fullName>Associated_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce User this Sender is associated to. Used for finding a Sender for a dynamic send from (e.g. Lead/Contact Owner).</description>
    <label>Associated User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Senders</relationshipName>
    <type>Lookup</type>
</CustomField>