dripmail-sf/force-app/main/default/objects/Sender__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>The sending domain this Sender&#39;s email will use in the From Email on a given email sent with Emergence Drip Mail</description>
    <label>Domain</label>
    <referenceTo>Domain__c</referenceTo>
    <relationshipLabel>Senders</relationshipLabel>
    <relationshipName>Senders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>