dripmail-sf/force-app/main/default/objects/Sender__c/fields/Dropdown_Name__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Name__c</fullName>
    <formula>Name &amp; &quot; (&quot; &amp; Email_Handle__c + &quot; &quot; &amp;  Email_Domain__c &amp; &quot;)&quot;</formula>
    <label>Dropdown Name</label>
    <type>Text</type>
</CustomField>