dripmail-sf/force-app/main/default/objects/Sender__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>Domain__r.Domain_Name__c</formula>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>