dripmail-sf/force-app/main/default/objects/Sender__c/fields/Email_Handle__c.field-meta.xml
<CustomField>
    <fullName>Email_Handle__c</fullName>
    <description>The portion of the senders email before the @ symbol. This is automatically joined with the Domain Name to produce the From Email. For example an Email Handle of &#39;marketing&#39; and a Domain Name of &#39;emergencelabs.io&#39; will produce &#39;marketing@emergencelabs.io&#39;</description>
    <inlineHelpText>The portion of the senders email before the @ symbol. This is automatically joined with the Domain Name to produce the From Email. For example an Email Handle of &#39;marketing&#39; and a Domain Name of &#39;emergencelabs.io&#39; will produce &#39;marketing@emergencelabs.io&#39;</inlineHelpText>
    <label>Email Handle</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>